# narm

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE.md  README.org
docs/: kgq336-codeplug.md  kgq336-wire-protocol.md  repeaters.csv
docs/freq_lists/: README.md
docs/freq_lists/amateur_vhf_uhf/: 2m_fm.toml  6m_fm.toml  70cm_fm.toml
docs/freq_lists/beacons/: ibp_hf.toml  swedish_vhf_uhf.toml
docs/freq_lists/hf/: pr_27mhz.toml
docs/freq_lists/marine/: ais.toml  marine_distress.toml  marine_hf_ship_to_ship.toml  marine_mf.toml  marine_vhf.toml
docs/freq_lists/non_amateur/: hunting_31mhz.toml  hunting_agri_155mhz.toml  pmr446.toml  pr_69mhz.toml  srbr_25khz.toml
docs/freq_lists/scout/: jota_hf.toml  nordic_vhf.toml
examples/: sample.toml
samples/: sm6wjm.toml
software/: .gitignore  README-anytone-at-d878uv.org  README-quansheng-uv-k5.org  README-wouxun-kg-q336.org
src/: .#main.rs  TODO.org  channel.rs  chirp.rs  commands.rs  grid.rs  kgq336.rs  lib.rs  main.rs  radio.rs  repeaters.rs  uvk5.rs
src/commands/: compile.rs  completions.rs  decode.rs  detect.rs  encode.rs  encode_db.rs  format.rs  grid.rs  info.rs  kgq336.rs  list_radios.rs  radio.rs  read.rs  repeaters.rs  validate.rs  verify.rs  write.rs  write_db.rs
src/kgq336/: decode.rs  error.rs  file.rs  inspect.rs  io.rs  wire.rs
src/radio/: anytone_at_d878uv.rs  quansheng_uv_k5.rs  tyt_md_380.rs  wouxun_kg_q336.rs  yaesu_ft_50r.rs
src/uvk5/: decode.rs  error.rs  io.rs  wire.rs
tests/: compile_chirp.rs  validate.rs
tests/common/: mod.rs
usbmon/: 99-usbmon.rules  README.org
