[package]
name = "narm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap-stdin = "0.8"
clap_complete = "4"
crc = "3"
csv = "1"
dirs = "5"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serialport = "4"
thiserror = "2"
toml = "0.8"
zerocopy = { version = "0.8", features = ["derive", "std"] }

[dev-dependencies]
tempfile = "3"
